spec/fixtures/layout/valid/parent.erb
parent top of file
<%= yield %>
parent bottom of file
