spec/fixtures/layout/invalid/parent.erb
parent line 1
<%= break_me_in_parent %>
parent line 3
